# STAPpp

./: CMakeLists.txt
data/: bar-6.out  homework.out
data/Q4/: Test-C.out  config.json  conv.py  gen_dat.py
data/T3/: T3mesh-1.out  T3mesh-4.out  T3mesh-8.out  T3patch.out  T3patch.py  error.py  generate_T3mesh.py
src/: CMakeLists.txt
src/cpp/: Domain.cpp  ElementGroup.cpp  Material.cpp  Node.cpp  Outputter.cpp  Q4.cpp  Solver.cpp  TecplotOutPutter.cpp  main.cpp
src/cpp/Elements/: Bar.cpp  Beam.cpp  H8.cpp  MindlinPlate.cpp  Q4.cpp  Q9.cpp  T3.cpp
src/data/: bar-6.out
src/data/T3/: T3mesh-1.out  T3mesh-2.out  T3patch.out  drawT3mesh.py  drawT3patch.py  test.py
src/h/: Clock.h  Domain.h  Element.h  ElementGroup.h  Material.h  Outputter.h  Q4.h  TecplotOutPutter.h
src/h/Elements/: Bar.h  Beam.h  H8.h  MindlinPlate.h  Q4.h  Q9.h  T3.h
